<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Editar nombre"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextoPrimario"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimaryVariant" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingrese un nuevo nombre para la rutina:"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nuevo_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textCapSentences"
        app:backgroundTint="?attr/colorPrimaryVariant"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/boton_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCELAR"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:textColor="?attr/colorPrimary"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/boton_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIRMAR"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:textColor="?attr/colorPrimary"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>