...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nombreRutinaButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nombre_rutina"
                android:theme="@style/TitleText"
                android:layout_gravity="center_vertical"
...
